# ubuntu_projects

./: .gitignore  .stl.cpp.swo  .vimrc  .vimrc.cp  call_once_impl_pthread  crop_to_remove.txt  cropped_list.txt  cropped_packages..txt  installed.txt  installed_packages.txt  packages.txt  remove_regexp.txt  stl.cpp  tutor.txt  tutor_vim.txt
asmprojects/alive/: alive.asm  makefile
asmprojects/asm_in_c/: adouble.asm  asum.asm  circle.asm  fromc.c  makefile  rect.asm  sreverse.asm
asmprojects/asm_in_c_2/: inline1.c  makefile
asmprojects/avx_align/: avx_unaligned.asm  makefile
asmprojects/avx_matrix/: makefile  matrix4x4.asm  printm4x4.asm  transposition4x4.asm
asmprojects/calling(args)/: args.asm  makefile
asmprojects/cmdline/: check.txt  cmdline  cmdline.asm  makefile
asmprojects/console_io/: console  console.asm  makefile
asmprojects/cpu/: avx.asm  cpu.asm  makefile  timer.asm
asmprojects/extern_function/: circle.asm  main.asm  makefile  rect.asm
asmprojects/file_io/: fileio  fileio.asm  makefile
asmprojects/floating_point/: floating_point.asm  makefile
asmprojects/function/: area.asm  area2.asm  makefile
asmprojects/hello/: hello.asm  makefile
asmprojects/int arithmetic/: inti.asm
c_projects/: err_funcs.c  err_funcs.h  log_funcs.c  log_funcs.h
cppprojects/: algotest1.cpp  commands.txt  concepts.cpp  future_sync_on_cv.cpp  lambda_expressions.cpp  resists.txt  test.cpp  test2.cpp
make_cmake/: CMakeLists.txt  main.cpp  test.cpp
make_cmake/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
qtprojects/: readme.txt
(+111 files in other folders)
