cmake_minimum_required(VERSION 3.0)
project(HelloWorld)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -mcx16 -stdlib=libc++ -std=c++17")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lc++abi -lpthread")
message(CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS})
message(CMAKE_EXE_LINKER_FLAGS:${CMAKE_EXE_LINKER_FLAGS})
set (CMAKE_CXX_COMPILER "clang++")
set (CMAKE_C_COMPILER "clang")
add_executable (main main.cpp)
